--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-server-express": "^2.19.0",
     "axios": "^0.20.0",
     "compression": "^1.7.4",
+    "connect-session-sequelize": "^7.0.4",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "morgan": "^1.10.0",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^8.4.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -19,8 +24,8 @@
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
-    "prettier": "^2.1.2",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "prettier": "^2.1.2"
   },
   "scripts": {
     "start-prod": "NODE_ENV='production' && node server",
